# tetravex-solver

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  generate.cc  generate.hh  io.cc  io.hh  main.cc  solver.cc  solver.hh  tetravex.cc  tetravex.hh
test_files/: bourquelot6-ref.txt  bourquelot6.txt
tests/: generate.cc  test.cc
tests_generation/: generate.cc  generate.hh  test.cc
